--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "newton-react-fsd-july-2023",
   "version": "0.1.0",
+  "author": "utkasrh",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
@@ -12,7 +13,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "startssss": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
